# napari-genome-viz

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
src/napari_genome_viz/: __init__.py  _reader.py  _widget.py  napari.yaml
src/napari_genome_viz/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_genome_viz/sample_data/: chr19_3traces.csv
