[metadata]
name = napari_genome_viz
version = 0.0.1
description = A plugin to visualise FOF-CT data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RubyDawes/napari-genome-viz
author = Ruebena Dawes
author_email = ruebena.dawes@gmail.com
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/RubyDawes/napari-genome-viz/issues
    Documentation = https://github.com/RubyDawes/napari-genome-viz#README.md
    Source Code = https://github.com/RubyDawes/napari-genome-viz
    User Support = https://github.com/RubyDawes/napari-genome-viz/issues

[options]
packages = find:
install_requires =
    magicgui
    matplotlib
    numpy
    pandas
    qtpy
    scipy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_genome_viz = napari_genome_viz:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
